chore: todo note

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 - run shellcheck on pre-commit?
 - commit rclone config but without possible token?... token as env var?
+
+- split this PR further?...
